log
Thu 09 May 2024 03:34:10 PM UTC: 
 treemap.c | 36 +++++++++++++++++++++++++++++++++---
 1 file changed, 33 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   58 |     TreeNode * parent = NULL;
      |                ^~~~~~
treemap.c:56:16: error: unused variable ‘new’ [-Werror=unused-variable]
   56 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
8c27fcd
Thu 09 May 2024 03:36:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:20: error: invalid initializer
   56 |     TreeNode new = createTreeNode(key, value);
      |                    ^~~~~~~~~~~~~~
treemap.c:58:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   58 |     TreeNode * parent = NULL;
      |                ^~~~~~
treemap.c:56:14: error: unused variable ‘new’ [-Werror=unused-variable]
   56 |     TreeNode new = createTreeNode(key, value);
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
5fc783c
Thu 09 May 2024 03:37:41 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:15: error: unused variable ‘new’ [-Werror=unused-variable]
   56 |     TreeNode *new = createTreeNode(key, value);
      |               ^~~
cc1: all warnings being treated as errors
Compilation failed
fbd4288
Thu 09 May 2024 03:41:23 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
dd13edf
Thu 09 May 2024 03:49:49 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:15: error: unused variable ‘right’ [-Werror=unused-variable]
   61 |     TreeNode *right = NULL;
      |               ^~~~~
treemap.c:60:15: error: unused variable ‘left’ [-Werror=unused-variable]
   60 |     TreeNode *left = NULL;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
a2431b3
Thu 09 May 2024 03:51:34 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
b5795fa
Thu 09 May 2024 03:58:33 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
1ed63d7
Thu 09 May 2024 03:59:24 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
9567c56
Thu 09 May 2024 03:59:42 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
d6a7854
Thu 09 May 2024 04:02:34 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
522f62c
